Fix horizontal alignment of gallery ctas

--- a/common/app/assets/stylesheets/module/_gallery.scss
+++ b/common/app/assets/stylesheets/module/_gallery.scss
@@ -33,7 +33,7 @@
 
 .gallery-nav {
     text-align: center;
-    margin-bottom: $baseline;
+    margin-bottom: $baseline*2;
 }
 
 .gallery-prev,
